<resources>
    <string name="app_name">Dr. OnCall</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="firstname">Firstname *</string>
    <string name="surname">Surname *</string>
    <string name="email">Email</string>
    <string name="select_date_of_birth">Date of birth</string>
    <string name="your_details">Your details</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="sex_at_birth">Sex at birth</string>
    <string name="title_activity_patient_main">PatientMainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">droncall@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Disease</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_sos">SOS</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_share">Share</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_patient_main2">PatientMainActivity2</string>
    <string name="title_activity_hospital_maps">HospitalMapsActivity</string>
    <string name="menu_hospital">Hospitals</string>
    <string name="sign_out">Sign out</string>
    <string name="enter_your_symptoms">Enter Your Symptoms !</string>
    <string name="know_your_disease">KNOW YOUR DISEASE</string>
    <string name="app_version">Version 1.1.0 beta</string>
    <string name="app_about_slogan">Dr.OnCall helps you and your loved ones check symptoms and discover what might be causing them – day or night without an appointment. Whatever bothering you, from stomach problems to headache, Dr.OnCall free symptom checker can help you find answers.</string>
    <string name="enter_symptom">ENTER SYMPTOM</string>

    <string-array name="symptom_list">
        <item>SELECT SYMPTOM</item>
        <item>Anxiety</item>
        <item>Stomach Ache</item>
        <item>Nausea</item>
        <item>Vomiting</item>
        <item>Fever</item>
        <item>Sudden Weight Loss</item>
        <item>Sweating</item>
        <item>Muscle And Body Pain</item>
        <item>Thirsty Than Usual</item>
        <item>Headaches</item>
        <item>Weakness/Fatigue</item>
        <item>Abdominal Pain</item>
        <item>Muscle Pain</item>
        <item>Dry Cough</item>
        <item>Diarrhoea/Constipation</item>
        <item>Frequent Urination</item>
        <item>Hunger</item>
        <item>Blurred Vision</item>
        <item>Skin Itching</item>
        <item>Chest Pain</item>
        <item>Shortness in Breath</item>
        <item>Dizziness</item>
        <item>Fast Heartbeat</item>
        <item>Indigestion</item>
        <item>Pressure Or Heaviness In Chest</item>
    </string-array>




</resources>