<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">


    <fragment
        android:id="@+id/nav_home"
        android:name="com.healthteam14.droncall.ui.activities.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_sos"
        android:name="com.healthteam14.droncall.ui.activities.sos.EmergenceFragment"
        android:label="@string/menu_sos"
        tools:layout="@layout/fragment_emergence" />

    <fragment
        android:id="@+id/nav_hosp"
        android:name="com.healthteam14.droncall.ui.activities.hospitals.HospitalsFragment"
        android:label="@string/menu_hospital"
        tools:layout="@layout/fragment_hospitals" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.healthteam14.droncall.ui.activities.about.AboutUsFragment"
        android:label="@string/about_us"
        tools:layout="@layout/fragment_about_us" />
</navigation>