<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:background="@color/white"
    tools:context=".ui.activities.about.AboutUsFragment">

  <TextView
      android:id="@+id/about_header"
      android:layout_centerHorizontal="true"
      android:text="@string/app_name"
      android:fontFamily="@font/asul"
      android:textAppearance="@style/TextAppearance.AppCompat.Body1"
      android:textSize="25sp"
      android:layout_alignParentTop="true"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"/>

    <ImageView
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/about_header"
        android:id="@+id/tv_appLogo"
        android:src="@drawable/splash_logo"
        android:layout_width="250dp"
        android:layout_height="250dp"/>

    <TextView
        android:layout_marginTop="8dp"
        android:layout_below="@+id/tv_appLogo"
        android:layout_centerHorizontal="true"
        android:text="@string/app_about_slogan"
        android:fontFamily="@font/asul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <TextView
        android:layout_centerHorizontal="true"
        android:text="@string/app_version"
        android:fontFamily="@font/asul"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>