<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.activities.SecondRegStepActivity">

    <LinearLayout
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold"
            android:text="@string/your_details"
            android:layout_marginBottom="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <EditText
                android:id="@+id/edtFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/firstname"
                android:inputType="textCapWords"
                android:maxLines="1"
                android:importantForAutofill="no" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <EditText
                android:id="@+id/edtSurname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/surname"
                android:inputType="textCapWords"
                android:maxLines="1"
                android:autofillHints="no" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <EditText
                android:id="@+id/edtEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:autofillHints="no"
                android:maxLines="1" />


        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:text="@string/select_date_of_birth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <DatePicker
            android:layout_gravity="center"
            android:id="@+id/dateOfBirthPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"/>

        <TextView
            android:layout_gravity="center"
            android:text="@string/sex_at_birth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioGroup
            android:layout_gravity="center"
            android:id="@+id/rgGender"
            android:layout_width="320dp"
            android:layout_height="54dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.738">

            <RadioButton
                android:id="@+id/male"
                android:layout_width="135dp"
                android:layout_height="43dp"
                android:layout_marginStart="29dp"
                android:buttonTint="#34B7FF"
                android:checked="true"
                android:text="@string/male"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.172"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/toolbar"
                app:layout_constraintVertical_bias="0.566" />

            <RadioButton
                android:id="@+id/female"
                android:layout_width="145dp"
                android:layout_height="43dp"
                android:buttonTint="#34B7FF"
                android:checked="false"
                android:paddingStart="5dp"
                android:text="@string/female"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.849"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.566" />
        </RadioGroup>
    </LinearLayout>


    <Button
        android:id="@+id/btnSignUp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_width="369dp"
        android:layout_height="71dp"
        android:background="@drawable/btn_shape_capsule"
        android:elevation="10dp"
        android:fontFamily="sans-serif"
        android:text="SIGN UP"
        android:textColor="#FFFFFF"/>


</RelativeLayout>