<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="272dp"
        android:layout_height="32dp"
        android:fontFamily="sans-serif"
        android:text="@string/enter_your_symptoms"
        android:textAlignment="center"
        android:textColor="#9E000000"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.431"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <Button
        android:id="@+id/btn_disease"
        android:layout_width="369dp"
        android:layout_height="71dp"
        android:background="@drawable/btn_shape_capsule"
        android:elevation="10dp"
        android:fontFamily="sans-serif"
        android:text="@string/know_your_disease"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.953" />

    <Spinner
        android:id="@+id/spSymptom1"
        android:layout_width="339dp"
        android:layout_height="54dp"
        android:background="@drawable/otptext"
        android:backgroundTint="@color/white"
        android:elevation="5dp"
        android:entries="@array/symptom_list"
        android:popupBackground="@drawable/otptext"
        android:soundEffectsEnabled="true"
        android:spinnerMode="dropdown"
        android:theme="@style/spinnerstyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <Spinner
        android:id="@+id/spSymptom2"
        android:layout_width="339dp"
        android:layout_height="54dp"
        android:background="@drawable/otptext"
        android:backgroundTint="@color/white"
        android:elevation="5dp"
        android:entries="@array/symptom_list"
        android:popupBackground="@drawable/otptext"
        android:soundEffectsEnabled="true"
        android:spinnerMode="dropdown"
        android:theme="@style/spinnerstyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.212" />

    <Spinner
        android:id="@+id/spSymptom3"
        android:layout_width="339dp"
        android:layout_height="54dp"
        android:background="@drawable/otptext"
        android:backgroundTint="@color/white"
        android:elevation="5dp"
        android:entries="@array/symptom_list"
        android:popupBackground="@drawable/otptext"
        android:soundEffectsEnabled="true"
        android:spinnerMode="dropdown"
        android:theme="@style/spinnerstyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.33" />

    <Spinner
        android:id="@+id/spSymptom4"
        android:layout_width="339dp"
        android:layout_height="54dp"
        android:background="@drawable/otptext"
        android:entries="@array/symptom_list"
        android:backgroundTint="@color/white"
        android:elevation="5dp"
        android:popupBackground="@drawable/otptext"
        android:soundEffectsEnabled="true"
        android:spinnerMode="dropdown"
        android:theme="@style/spinnerstyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.446" />

    <Spinner
        android:id="@+id/spSymptom5"
        android:layout_width="339dp"
        android:layout_height="54dp"
        android:background="@drawable/otptext"
        android:backgroundTint="@color/white"
        android:elevation="5dp"
        android:popupBackground="@drawable/otptext"
        android:entries="@array/symptom_list"
        android:soundEffectsEnabled="true"
        android:spinnerMode="dropdown"
        android:theme="@style/spinnerstyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.57" />


    <Spinner
        android:id="@+id/spSymptom6"
        android:layout_width="339dp"
        android:layout_height="54dp"
        android:background="@drawable/otptext"
        android:backgroundTint="@color/white"
        android:entries="@array/symptom_list"
        android:elevation="5dp"
        android:popupBackground="@drawable/otptext"
        android:soundEffectsEnabled="true"
        android:spinnerMode="dropdown"
        android:theme="@style/spinnerstyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.692" />

    <EditText
        android:id="@+id/edSymptom7"
        android:layout_width="339dp"
        android:layout_height="54dp"
        android:background="@drawable/otptext"
        android:hint="@string/enter_symptom"
        android:backgroundTint="@color/white"
        android:elevation="5dp"
        android:popupBackground="@drawable/otptext"
        android:soundEffectsEnabled="true"
        android:inputType="text"
        android:theme="@style/spinnerstyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.809" />


</androidx.constraintlayout.widget.ConstraintLayout>